--- a/index.html
+++ b/index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
-
-   <meta charset="UTF-8">
- 
-<body>
- 
-   
-
-<script scr="../script.js"></script>
-
-</body>
-
-</html>  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
-   <link rel="stylesheet" href="../css/style.css">
-   <link rel="stylesheet" href="../css/normalize.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/normalize.css">
    
 </head>
+
+<body>
+
+
+<script src="script.js"></script>
+</body>
+
+</html>
