--- a/index.html
+++ b/index.html
@@ -6,12 +6,29 @@
     <title>Working on Macbook</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/normalize.css">
-   
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
+<div class="header">
+    <div class="img-span">
+        <img src="img/logo-ts.webp" >
+    </div>
 
+    <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Footer</a></li>
+    </ul>
+    
+        <button>
+            <img src="img/menu-logo.svg">
+        </button>
+    
+</div>
 
 <script src="script.js"></script>
 </body>
