--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
 
 <div class="header">
     <div class="img-span">
-        <img src="img/logo-ts.webp" >
+        <img src="img/coffee-cup-svgrepo-com.svg" >
     </div>
 
-    <ul>
+    <ul class = 'header_ul'>
         <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Footer</a></li>
     </ul>
     
-        <button>
+        <button class="header_button">
             <img src="img/menu-logo.svg">
         </button>
     
