--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <ul class = 'header_ul'>
-        <li><a href="#">Home</a></li>
+        <li><a href="#" class="forJs">Home</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Footer</a></li>
     </ul>
@@ -40,7 +40,8 @@
     </div>
 </div>
 
-<script  defer ="script.js"></script>
+<script  src="script.js"> </script>
+
 </body>
 
 </html>
