after doing product example

--- a/index.html
+++ b/index.html
@@ -40,6 +40,20 @@
     </div>
 </div>
 
+
+<div class="example">
+    <div class="hed">
+        <p>Ценна:<span class="example__price">180</span>руб</p>
+        <button class="example__button">+</button>
+    </div>
+    <div class="fot">
+        <div class="example__res">
+            <p class="example__res-text">Итого к оплате:<span class="example__result">180</span>руб</p>
+            
+        </div>
+        
+    </div>
+</div>
 <script  src="script.js"> </script>
 
 </body>
