after work with second example button

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <div class="hed">
         <p>Ценна:<span class="example__price">180</span>руб</p>
         <button class="example__button">+</button>
+        <button class="example__button2">-</button>
     </div>
     <div class="fot">
         <div class="example__res">
