--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <div class="example">
     <div class="hed">
-        <p>Ценна:<span class="example__price">180</span>руб</p>
+        <p>Ценна:<span class="example__price" data-counter-price="1">180</span>руб</p>
         <button class="example__button">+</button>
         <button class="example__button2">-</button>
     </div>
