after work with !important

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <ul class = 'header_ul'>
         <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Home</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="#" id="header_ul_li-a">About</a></li>
         <li><a href="#">Footer</a></li>
     </ul>
     
