after work with имт

--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@
     </div>
 </div>
 
+<form>
+    <input required type="text"  placeholder="Введите рост" class="inputHeight">
+    <input required type="text" placeholder="Введите Вес" class="inputWeight">
+    <button class="button">посчитать ИМТ</button>
+</form>
+
 <script  src="script.js"> </script>
 
 </body>
