after add modification

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
 <div class="header">
     <div class="img-span">
-        <img src="img/coffee-cup-svgrepo-com.svg" >
+        <img src="img/coffee-cup-svgrepo-com.svg">
     </div>
 
     <ul class = 'header_ul'>
-        <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Home</a></li>
+        <li><a>Home</a></li>
         <li><a href="#" class="header__ul__li__a">About</a></li>
         <li>
             <select>
@@ -39,7 +39,7 @@
 <div class="main">
     
     <div class="secondPart" >
-        <button class="secondPartButton">find out the current interval</button>
+        <button class="secondPartButton" >find out the current interval</button>
     </div>
     <div class="firstPart">
         <div class="info">
