after start learn react

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <ul class = 'header_ul'>
-        <li><a>Home</a></li>
+        <li class="header_ul_li"><a>Home</a></li>
         <li><a href="#" class="header__ul__li__a">About</a></li>
         <li>
             <select>
