after remove some files from workspace

--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
     <input required type="text" placeholder="Введите Вес" class="inputWeight">
     <button class="button">посчитать ИМТ</button>
 </form>
-
+    <div class="htmlRoot">
+        
+    </div>
 <script  src="script.js"> </script>
 
 </body>
