--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
 		<meta
@@ -29,7 +28,7 @@
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="modal"></div>
-		<div id="root"></div>
+		<div class="main"></div>
 		<!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
