--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
 			/>
 			<button class="button">посчитать ИМТ</button>
 		</form>
-		<div class="htmlRoot"></div>
+		<div class="div"></div>
+		<div class="div2"></div>
 		<script src="script.js"></script>
 	</body>
 </html>
